# structopt

./: .clang-format  .clang-tidy  .clangd  .gitignore  .luarc.json  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  premake5.lua
.github/workflows/: build_examples.yml  linux.yml  win.yml
examples/: CMakeLists.txt  compound_arguments.cpp  demo.cpp  double_dash_argument.cpp  enum_class_argument.cpp  flag_arguments.cpp  float_literals.cpp  integer_literals.cpp  nested_structures.cpp  nested_structures_2.cpp  option_delimiters.cpp  optional_arguments.cpp  pair_argument.cpp  positional_and_compound_arguments.cpp  positional_and_optional_arguments.cpp  positional_arguments.cpp  premake5.lua  printing_help.cpp  printing_help_custom.cpp  remaining_arguments.cpp  ristricted.cpp  tuple_arguments.cpp
scripts/: utils.lua
src/: structopt.hpp
tests/: CMakeLists.txt  doctest.hpp  premake5.lua  test_3d_array_positional_argument.cpp  test_array_optional_argument.cpp  test_array_positional_argument.cpp  test_combined_flag_arguments.cpp  test_container_adapter_positional_argument.cpp  test_deque_optional_argument.cpp  test_deque_positional_argument.cpp  test_double_dash_option_delimiter.cpp  test_enum_optional_argument.cpp  test_enum_positional_argument.cpp  test_equal_delimiter_optional_argument.cpp  test_excess_positional_arguments.cpp  test_list_positional_argument.cpp  test_multiple_nested_structs_positional.cpp  test_nested_struct.cpp  test_option_delimiter.cpp  test_optional_argument_naming.cpp  test_optional_flag_argument.cpp  test_ristricted_arguments.cpp  test_set_positional_argument.cpp  test_single_optional_argument.cpp  test_single_positional_and_optional.cpp  test_single_positional_argument.cpp  test_trailing_positional_arguments.cpp  test_tuple_optional_argument.cpp  test_tuple_positional_argument.cpp  test_unknown_optional_argument.cpp  test_vector_optional_argument.cpp  test_vector_positional_argument.cpp
